--- a/src/modules/Article.scss
+++ b/src/modules/Article.scss
@@ -18,8 +18,7 @@
     color: #ff7f50;
     transition: all 0.5s cubic-bezier(0, 0.5, 0.5, 1);
 
-    &:hover,
-    &:visited {
+    &:hover {
       color: #801936;
       text-decoration: underline;
     }
@@ -43,10 +42,10 @@
 
 
 .article-container {
-  flex: 66.6%;
+  flex: 66%;
   z-index: 11;
-  translate: 0 calc(-0.5 * 8.2vw);
   border-left: #f6f6f6 solid 1px;
+  transform: translateY(calc(-0.5 * 17vh));
 
   .image-container {
     text-align: center;
