--- a/src/modules/TopBar.scss
+++ b/src/modules/TopBar.scss
@@ -1,9 +1,7 @@
 .topbar-container {
     position: relative;
-    width: 92vw;
-    right: 4vw;
-    left: 4vw;
-    height: 8.2vw;
+    margin: 0 var(--smallbar);
+    height: 17vh;
     z-index: 11;
     background-color: #971a43;
     translate: 0;
